ActiveMQ component example

--- a/springbootexample/src/main/resources/application.properties
+++ b/springbootexample/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-camel.component.activemq.broker-url=tcp://localhost:61616
+camel.component.activemq.use-pooled-connection=true
+camel.component.activemq.use-single-connection=false
+camel.springboot.main-run-controller=true
+camel.component.activemq.broker-url=tcp://127.0.0.1:61612
+camel.component.activemq.username=admin
+camel.component.activemq.password=admin
+#camel.component.activemq.consumer-type=Simple
+#camel.component.activemq.transacted=true
+#camel.component.activemq.acknowledgement-mode-name=CLIENT_ACKNOWLEDGE
 lb.urls=direct:url1,direct:url2,direct:url3
