changes for dockerizing the application

--- a/springbootexample/config/application.properties
+++ b/springbootexample/config/application.properties
@@ -1,9 +1,14 @@
 camel.component.activemq.use-pooled-connection=true
 camel.component.activemq.use-single-connection=false
 camel.springboot.main-run-controller=true
-camel.component.activemq.broker-url=tcp://127.0.0.1:61612
+camel.component.activemq.broker-url=tcp://activemq:61612
 camel.component.activemq.username=admin
 camel.component.activemq.password=admin
+
+#kafka properties
+camel.component.kafka.allow-manual-commit=true
+camel.component.kafka.brokers=kafka:9092
+camel.component.kafka.enable-idempotence=true
 #camel.component.activemq.consumer-type=Simple
 #camel.component.activemq.transacted=true
 #camel.component.activemq.acknowledgement-mode-name=CLIENT_ACKNOWLEDGE
