Idempotency commented in application property file

--- a/springbootexample/config/application.properties
+++ b/springbootexample/config/application.properties
@@ -8,7 +8,7 @@ camel.component.activemq.password=admin
 #kafka properties
 camel.component.kafka.allow-manual-commit=true
 camel.component.kafka.brokers=kafka:9092
-camel.component.kafka.enable-idempotence=true
+#camel.component.kafka.enable-idempotence=true
 #camel.component.activemq.consumer-type=Simple
 #camel.component.activemq.transacted=true
 #camel.component.activemq.acknowledgement-mode-name=CLIENT_ACKNOWLEDGE
