Camel master component config and implementation

--- a/springbootexample/config/application.properties
+++ b/springbootexample/config/application.properties
@@ -13,3 +13,6 @@ camel.component.kafka.brokers=kafka:9092
 #camel.component.activemq.transacted=true
 #camel.component.activemq.acknowledgement-mode-name=CLIENT_ACKNOWLEDGE
 lb.urls=direct:url1,direct:url2,direct:url3
+
+camel.component.zookeeper-master.zk-root=/springboot/activemq
+camel.component.zookeeper-master.zoo-keeper-url=zookeeper:2181
