--- a/springbootexample/pom.xml
+++ b/springbootexample/pom.xml
@@ -102,6 +102,11 @@
 		</dependency>
 
 		<dependency>
+		  <groupId>org.apache.camel.springboot</groupId>
+		  <artifactId>camel-zookeeper-master-starter</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
