--- a/springbootexample/docker/docker-compose.yml
+++ b/springbootexample/docker/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 services:
   redis-1:
     image: redis:latest
+    hostname: redis-1
     command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
     ports:
       - "6379:6379"
@@ -9,56 +10,79 @@ services:
       - ./data/redis-1:/data
     networks:
       - redis-cluster
+    networks:
+      redis-cluster:
+        ipv4_address: 169.13.0.2
 
   redis-2:
     image: redis:latest
-    command: ["redis-server", "--port", "6380", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
+    hostname: redis-2
+    command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
     ports:
       - "6380:6379"
     volumes:
       - ./data/redis-2:/data
     networks:
       - redis-cluster
+    networks:
+      redis-cluster:
+        ipv4_address: 169.13.0.3
 
   redis-3:
     image: redis:latest
-    command: ["redis-server", "--port", "6381", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
+    hostname: redis-3
+    command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
     ports:
       - "6381:6379"
     volumes:
       - ./data/redis-3:/data
     networks:
       - redis-cluster
+    networks:
+      redis-cluster:
+        ipv4_address: 169.13.0.4
 
   redis-4:
     image: redis:latest
-    command: ["redis-server", "--port", "6382", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
+    hostname: redis-4
+    command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
     ports:
       - "6382:6379"
     volumes:
       - ./data/redis-4:/data
     networks:
       - redis-cluster
+    networks:
+      redis-cluster:
+        ipv4_address: 169.13.0.5
 
   redis-5:
     image: redis:latest
-    command: ["redis-server", "--port", "6383", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
+    hostname: redis-5
+    command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
     ports:
       - "6383:6379"
     volumes:
       - ./data/redis-5:/data
     networks:
       - redis-cluster
+    networks:
+      redis-cluster:
+        ipv4_address: 169.13.0.6
 
   redis-6:
     image: redis:latest
-    command: ["redis-server", "--port", "6384", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
+    hostname: redis-6
+    command: ["redis-server", "--port", "6379", "--cluster-enabled", "yes", "--cluster-config-file", "/data/nodes.conf", "--cluster-node-timeout", "5000", "--appendonly", "yes"]
     ports:
       - "6384:6379"
     volumes:
       - ./data/redis-6:/data
     networks:
       - redis-cluster
+    networks:
+      redis-cluster:
+        ipv4_address: 169.13.0.7
 
 networks:
   redis-cluster:
