--- a/springbootexample/config/application.properties
+++ b/springbootexample/config/application.properties
@@ -1,3 +1,10 @@
+server.port=8080
+
+ management.endpoints.web.exposure.include=hawtio,jolokia
+ spring.jmx.enabled=true
+ hawtio.authenticationEnabled=false
+
+
 camel.component.activemq.use-pooled-connection=true
 camel.component.activemq.use-single-connection=false
 camel.springboot.main-run-controller=true
